Added Swing UI